Overfilling and chage names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyMoneyTrackerTwo</string>
+    <string name="name_hint">Название</string>
+    <string name="price_hint">0</string>
 </resources>
