MMade a design. Rendered in color styles, font size, etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyMoneyTrackerTwo</string>
     <string name="name_hint">Название</string>
     <string name="price_hint">0</string>
+    <string name="rouble">\u20bd</string>
 </resources>
