Remove items, check action mode, cheng items color, off refresh animation, delete icon,Hide round button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
     <string name="app_name">Учет бюджета</string>
     <string name="name_hint">Название</string>
-    <string name="price_hint">0P</string>
-    <string name="rouble">\u20bd</string>
+    <string name="price_hint">0</string>
+    <string name="rouble">Р</string>
 
     <string name="expenses">Расходы</string>
     <string name="incomes">Доходы</string>
     <string name="balance">Баланс</string>
     <string name="error">Произошла ошибка</string>
     <string name="new_item">Новая запись</string>
+    <string name="confirm_remove">Точно удаляем строки?</string>
 
     <array name="main_pager_titles">
         <item>@string/expenses</item>
